--- a/pages/gallery_1.html
+++ b/pages/gallery_1.html
@@ -29,7 +29,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand page-title" href="#">Personal Gallery</a>
+                <a class="navbar-brand page-title" href="#">The Travancore Heritage</a>
             </div>
         </div>
         <!-- /.container -->
@@ -191,6 +191,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/lightbox.js"></script>
     <script src="../js/thumbnail-gallery.js"></script>
+    <link href="../js/gallery/thetravancoreheritage.js" rel="stylesheet">
 </body>
 
 </html>
