General page corrections

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
 				<div class="col-twelve">
 
-					<h5>Hello, World.</h5>
-					<h1>I'm Arun Kumar S A</h1>
+					<h5>Hello, World!</h5>
+					<h1>I'm Arun</h1>
 
 					<p class="intro-position">
-						<span>J2EE Developer</span>
+						<span>J2EE Developer | Gamer | Traveller</span>
 					</p>
 
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -93,6 +93,7 @@
 			<li><a href="#"><i class="fa fa-github"></i></a></li>
 			<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="gallery.html"><i class="fa fa-picture-o"></i></a></li>
 		</ul>
 		<!--intro-social-->
 
@@ -113,7 +114,7 @@
 
 					<img src="images/home/profile-pic.jpg" alt="Profile Picture">
 
-					<p class="lead">I am a self-motivated dynamic professional with 4+ years of experience in J2EE
+					<p class="lead">I am a self-motivated dynamic professional with 7+ years of experience in J2EE
 						application development and having an extraordinary sense of responsibility for the profession.
 						I keep myself updated with the current trends in growing industry and I am looking forward to
 						work in a challenging role in a growing organization which, as it does, takes me along the
@@ -143,7 +144,7 @@
 					</li>
 					<li>
 						<strong>Website:</strong>
-						<span>arunkumarsa.space</span>
+						<span>www.iamarun.tk</span>
 					</li>
 					<li>
 						<strong>Email:</strong>
@@ -157,20 +158,28 @@
 				<p>These are some of the technologies currently I am working with.</p>
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent90"><span>95%</span></div>
+						<div class="progress percent95"><span>95%</span></div>
 						<strong>JAVA | J2EE</strong>
 					</li>
 					<li>
-						<div class="progress percent85"><span>90%</span></div>
-						<strong>SPRING</strong>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>SPRING | SPRING BOOT</strong>
 					</li>
 					<li>
-						<div class="progress percent70"><span>90%</span></div>
+						<div class="progress percent90"><span>90%</span></div>
 						<strong>HIBERNATE</strong>
 					</li>
 					<li>
-						<div class="progress percent95"><span>90%</span></div>
-						<strong>HTML| CSS | JQUERY</strong>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>HTML | CSS</strong>
+					</li>
+					<li>
+						<div class="progress percent90"><span>90%</span></div>
+						<strong>JQUERY | BOOTSTRAP</strong>
+					</li>
+					<li>
+						<div class="progress percent50"><span>50%</span></div>
+						<strong>ANGULAR</strong>
 					</li>
 				</ul>
 			</div>
@@ -378,6 +387,7 @@
 					<li><a href="#"><i class="fa fa-github"></i></a></li>
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="gallery.html"><i class="fa fa-picture-o"></i></a></li>
 				</ul>
 			</div>
 
