--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
    ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- CSS
-   ================================================== -->
+	<!-- CSS -->
+	<!-- ================================================== -->
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
+	<!-- ================================================== -->
 
 	<!-- script
    ================================================== -->
@@ -62,32 +63,25 @@
 		</div> <!-- /row -->
 	</header> <!-- /header -->
 
-	<!-- intro section
-   ================================================== -->
+	<!-- intro section-->
+	<!-- ================================================== -->
 	<section id="intro">
-
 		<div class="intro-overlay"></div>
-
+		<!-- intro-content -->
 		<div class="intro-content">
 			<div class="row">
-
 				<div class="col-twelve">
-
 					<h5>Hello, World!</h5>
 					<h1>I'm Arun</h1>
-
 					<p class="intro-position">
 						<span>J2EE Developer | Gamer | Traveller</span>
 					</p>
-
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
-
 				</div>
-
 			</div>
-		</div> <!-- /intro-content -->
-
-		<!--intro-social-->
+		</div>
+		<!-- intro-content -->
+		<!-- intro-social -->
 		<ul class="intro-social">
 			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			<li><a href="#"><i class="fa fa-github"></i></a></li>
@@ -95,20 +89,19 @@
 			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 			<li><a href="gallery.html"><i class="fa fa-picture-o"></i></a></li>
 		</ul>
-		<!--intro-social-->
+		<!-- intro-social -->
+	</section>
+	<!-- ================================================== -->
 
-	</section> <!-- /intro -->
-
-
-	<!-- about section
-   ================================================== -->
+	<!-- about section -->
+	<!-- ================================================== -->
 	<section id="about">
 
 		<div class="row section-intro">
 			<div class="col-twelve">
 
 				<h5>About</h5>
-				<h1>Let me introduce myself.</h1>
+				<h1>Let me introduce myself</h1>
 
 				<div class="intro-info">
 
@@ -184,8 +177,6 @@
 				</ul>
 			</div>
 		</div>
-
-
 	</section> <!-- /process-->
 
 
@@ -340,8 +331,8 @@
 			</div> <!-- /resume-timeline -->
 	</section> <!-- /features -->
 
-	<!-- contact
-   ================================================== -->
+	<!-- contact -->
+	<!-- ================================================== -->
 	<section id="contact">
 		<div class="row contact-info">
 			<div class="col-four tab-full">
@@ -373,12 +364,12 @@
 					Mobile: (+91) 7012660826<br>
 				</p>
 			</div>
-		</div> <!-- /contact-info -->
-	</section> <!-- /contact -->
+		</div>
+	</section>
+	<!-- ================================================== -->
 
-	<!-- footer
-   ================================================== -->
-
+	<!-- footer -->
+	<!-- ================================================== -->
 	<footer>
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
@@ -390,7 +381,6 @@
 					<li><a href="gallery.html"><i class="fa fa-picture-o"></i></a></li>
 				</ul>
 			</div>
-
 			<div class="col-six tab-full">
 				<div class="copyright">
 					<span>Design by <a href="http://iamarun.tk/">Arun Kumar S A</a></span>
@@ -399,18 +389,20 @@
 			<div id="go-top">
 				<a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
 			</div>
-		</div> <!-- /row -->
+		</div>
 	</footer>
+	<!-- ================================================== -->
 
 	<div id="preloader">
 		<div id="loader"></div>
 	</div>
 
-	<!-- Java Script
-   ================================================== -->
+	<!-- Java Script -->
+	<!-- ================================================== -->
 	<script src="js/jquery-2.1.3.min.js"></script>
 	<script src="js/plugins.js"></script>
 	<script src="js/main.js"></script>
+	<!-- ================================================== -->
 </body>
 
 </html>
