--- a/pages/gallery_4.html
+++ b/pages/gallery_4.html
@@ -178,7 +178,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; <a href="http://www.arunkumarsa.space">www.arunkumarsa.space</a> 2016</p>
+                    <p>Copyright &copy; <a href="http://www.arunkumarsa.space"www.iamarun.tk</a> 2016</p>
                 </div>
             </div>
         </footer>
