Changes to gallery

--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -58,6 +58,15 @@
                     </span>
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award.jpg" alt="">
+                    </a>
+                    <span class="caption">
+                        Nakshatra Award - Allianz Technologies
+                    </span>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
                     <a class="thumbnail" href="../images/awards/medal_award.png" data-lightbox="gallery"
                         data-title="In recognition to the meritorius performance, continued focus on customer centricity, and operational excellence">
                         <img class="img-responsive" src="../images/awards/medal_award.png" alt="">
