--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,7 @@
 
                 <!-- Rewards and Recognition -->
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="pages/gallery_2.html">
+                    <a class="thumbnail" href="pages/rewards.html">
                         <img class="img-responsive" src="images/gallery/thumbnails/gallery_2.png" alt="">
                     </a>
                     <span class="caption">
