--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</li>
 					<li>
 						<strong>Job:</strong>
-						<span>J2EE Developer at Infosys</span>
+						<span>J2EE Developer at Allianz</span>
 					</li>
 					<li>
 						<strong>Website:</strong>
