--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 					<img src="images/home/profile-pic.jpg" alt="Profile Picture">
 
-					<p class="lead">I am a self-motivated dynamic professional with 7+ years of experience in J2EE
+					<p class="lead">I am a self-motivated dynamic professional with 8+ years of experience in J2EE
 						application development and having an extraordinary sense of responsibility for the profession.
 						I keep myself updated with the current trends in growing industry and I am looking forward to
 						work in a challenging role in a growing organization which, as it does, takes me along the
@@ -214,7 +214,7 @@
 							<i class="fa fa-graduation-cap"></i>
 						</div>
 						<div class="timeline-header">
-							<h3>Systems Analyst</h3>
+							<h3>Systems Specialist</h3>
 							<p>October 2018 till date</p>
 						</div>
 						<div class="timeline-content">
