Changes in rewards section

--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -40,32 +40,23 @@
         <div class="row">
             <div class="nav">
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="../images/awards/certificate_of_excellence.png" data-lightbox="gallery"
-                        data-title="For the outstanding performance and Service">
-                        <img class="img-responsive" src="../images/awards/certificate_of_excellence.png" alt="">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_20.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q3 2020">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_20.jpg" alt="">
                     </a>
                     <span class="caption">
-                        Certificate of Excellence - IBS Software Services
+                        Nakshatra Award Q3 2020 - Allianz Technologies
                     </span>
-                </div>
+                </div>        
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="../images/awards/insta_award.png" data-lightbox="gallery"
-                        data-title="Detailed analysis and efforts took to develop the app dashboard and for the data correction scripts">
-                        <img class="img-responsive" src="../images/awards/insta_award.png" alt="">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q1_19.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q1 2019">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q1_19.jpg" alt="">
                     </a>
                     <span class="caption">
-                        Insta Award - Infosys
+                        Nakshatra Award Q1 2019 - Allianz Technologies
                     </span>
-                </div>
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="../images/awards/nakshatra_award.jpg" data-lightbox="gallery"
-                        data-title="For driving a high performance culture and being an outstanding star performer of the organization">
-                        <img class="img-responsive" src="../images/awards/nakshatra_award.jpg" alt="">
-                    </a>
-                    <span class="caption">
-                        Nakshatra Award - Allianz Technologies
-                    </span>
-                </div>
+                </div>				
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
                     <a class="thumbnail" href="../images/awards/medal_award.png" data-lightbox="gallery"
                         data-title="In recognition to the meritorius performance, continued focus on customer centricity, and operational excellence">
@@ -73,6 +64,24 @@
                     </a>
                     <span class="caption">
                         Medal Award - Allianz Technologies
+                    </span>
+                </div>
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/certificate_of_excellence.png" data-lightbox="gallery"
+                        data-title="For the outstanding performance and Service">
+                        <img class="img-responsive" src="../images/awards/certificate_of_excellence.png" alt="">
+                    </a>
+                    <span class="caption">
+                        Certificate of Excellence - IBS Software Services
+                    </span>
+                </div>   
+				 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/insta_award.png" data-lightbox="gallery"
+                        data-title="Detailed analysis and efforts took to develop the app dashboard and for the data correction scripts">
+                        <img class="img-responsive" src="../images/awards/insta_award.png" alt="">
+                    </a>
+                    <span class="caption">
+                        Insta Award - Infosys
                     </span>
                 </div>
             </div>
