Added data for Google Analytics

--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
 	<!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="images/home/title.png">
-
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMMQ2R3XVJ"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+ 		gtag('js', new Date());
+		gtag('config', 'G-FMMQ2R3XVJ');
+	</script>
 </head>
 
 <body id="top">
