--- a/index.html
+++ b/index.html
@@ -130,13 +130,11 @@ src="https://www.facebook.com/tr?id=692769551759449&ev=PageView&noscript=1"
 
 				<div class="intro-info">
 
-					<img src="images/home/profile-pic.jpg" alt="Profile Picture">
+					<img src="images/home/profile-pic-new.jpg" alt="Profile Picture">
 
-					<p class="lead">I am a self-motivated dynamic professional with 8+ years of experience in J2EE
-						application development and having an extraordinary sense of responsibility for the profession.
-						I keep myself updated with the current trends in growing industry and I am looking forward to
-						work in a challenging role in a growing organization which, as it does, takes me along the
-						growth path. Other than JAVA, I find myself busy with PC gaming, tech reading and travelling.
+					<p class="lead">I am a self-motivated, dynamic professional with 12+ years of experience as a backend Software Engineer in the vibrant tech industry, demonstrating an extraordinary sense of responsibility for the profession. 
+						I stay updated with current industry trends and maintain excellent relationships with my team, making me a valuable asset. 
+						I am seeking a challenging role in a growing organization that offers opportunities for both personal and professional growth.
 					</p>
 				</div>
 
