--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -39,13 +39,22 @@
 
         <div class="row">
             <div class="nav">
-                <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_20.jpg" data-lightbox="gallery"
-                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q3 2020">
-                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_20.jpg" alt="">
+		 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_2023.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q3 2023">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_2023.jpg" alt="">
                     </a>
                     <span class="caption">
-                        Nakshatra Award Q3 2020 - Allianz Technologies
+                        Nakshatra Award Q3 2023 - Allianz Technologies
+                    </span>
+                </div>     
+                <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q2_2022.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q2 2022">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q2_2022.jpg" alt="">
+                    </a>
+                    <span class="caption">
+                        Nakshatra Award Q2 2022 - Allianz Technologies
                     </span>
                 </div>        
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
