--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -36,13 +36,13 @@
     <h1 class="page-header">Some memories never fade...</h1>
     <!-- Page Content -->
     <div class="container">
-
+	    
         <div class="row">
             <div class="nav">
 		 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
-                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_2023.jpg" data-lightbox="gallery"
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_2023.png" data-lightbox="gallery"
                         data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q3 2023">
-                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_2023.jpg" alt="">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_2023.png" alt="">
                     </a>
                     <span class="caption">
                         Nakshatra Award Q3 2023 - Allianz Technologies
