--- a/pages/rewards.html
+++ b/pages/rewards.html
@@ -56,7 +56,16 @@
                     <span class="caption">
                         Nakshatra Award Q2 2022 - Allianz Technologies
                     </span>
-                </div>        
+                </div>
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
+                    <a class="thumbnail" href="../images/awards/nakshatra_award_q3_2020.jpg" data-lightbox="gallery"
+                        data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q3 2020">
+                        <img class="img-responsive" src="../images/awards/nakshatra_award_q3_2020.jpg" alt="">
+                    </a>
+                    <span class="caption">
+                        Nakshatra Award Q3 2020 - Allianz Technologies
+                    </span>
+                </div>
                 <div class="col-lg-3 col-md-4 col-xs-6 thumb-normal">
                     <a class="thumbnail" href="../images/awards/nakshatra_award_q1_19.jpg" data-lightbox="gallery"
                         data-title="For driving a high performance culture and being an outstanding star performer of the organization during Q1 2019">
